--- a/ios/quer/Info.plist
+++ b/ios/quer/Info.plist
@@ -70,5 +70,7 @@
       <string>Octicons.ttf</string>
       <string>Zocial.ttf</string>
     </array>
+	<key>NSCameraUsageDescription</key>
+	<string>Please provide access to the camera for scanning QR codes.</string>
 </dict>
 </plist>
