--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/stack": "^5.14.5",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-camera": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
