--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,19 +1,21 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative "../node_modules/react-native/scripts/react_native_pods"
+require_relative "../node_modules/@react-native-community/cli-platform-ios/native_modules"
 
-platform :ios, '10.0'
+platform :ios, "10.0"
 
-target 'quer' do
+target "quer" do
   config = use_native_modules!
+
+  permissions_path = "../node_modules/react-native-permissions/ios"
+  pod "Permission-Camera", :path => "#{permissions_path}/Camera/Permission-Camera.podspec"
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => false,
   )
 
-
-  target 'querTests' do
+  target "querTests" do
     inherit! :complete
     # Pods for testing
   end
