--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.64.2",
     "react-native-camera": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-permissions": "^3.0.5",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.2.0",
