--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-native-firebase/firestore": "^12.3.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "agora-rn-uikit": "^3.3.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-agora": "^3.4.6",
     "react-native-camera": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-permissions": "^3.0.5",
